# CCL

./: .gitignore  CMakeLists.txt  README.md
cmake/: MTLCompConfig.cmake.in
examples/: device_info_metal.c  example_feature_test.c  example_image_effects.c  example_standard_kernels.c  feature_test_metal.c  matrix_mult_metal.c  vec_add_metal.c
include/: ccl.h
shaders/: argument_buffer_demo.metal  function_table_demo.metal  icb_demo.metal  image_effects.metal  simdgroup_matrix.metal  simdgroup_matrix_demo.metal  standard_kernels.metal  texture_3d_demo.metal
src/: ccl_internal.h  ccl_metal.m  mtl_argbuf.m  mtl_compute.h  mtl_compute_core.h  mtl_device.m  mtl_dispatch.m  mtl_dispatch_advanced.m  mtl_internal.h  mtl_logging.m  mtl_pass.m  mtl_pipeline.m  mtl_resource.m  mtl_tensor.m  mtl_texture.h  mtl_texture.m
